first iteration of header done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header class="hero">
-        <div class="logo-container">
+        <div class="nav-cont">
+           <a class="logo" href=""><img style="width: 70px; height:70px;" src="img/zen-logo.jpg" alt="Company's logo"> <span>Zen Suites</span> </a>
             <nav class="main-nav">
                 <a href="">Services</a>
                 <a href="">Contact</a>
@@ -20,7 +21,7 @@
 
         </div>
     </header>
-    
+
     <section class="room">
 
     </section>
