first prototype done

--- a/index.html
+++ b/index.html
@@ -17,17 +17,31 @@
                 <a href="">About Us</a>
             </nav>
         </div>
-        <div class="hero-content"> 
-
+        <div class="hero-cont"> 
+            <h1>Zen Suites</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, esse ipsa! Reiciendis ad deleniti nobis, ipsa deserunt recusandae iure ipsam tenetur ut! Deleniti, perferendis? Animi commodi reiciendis doloribus asperiores aut?</p>
+            <a href="">Learn More</a>
         </div>
     </header>
 
-    <section class="room">
-
+    <section class="info1" >
+        <h2>Information about company</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae ipsum velit pariatur optio libero magnam iure dolore quis? Id similique sit iusto illo? Eligendi nostrum deleniti quod incidunt optio esse?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae ipsum velit pariatur optio libero magnam iure dolore quis? Id similique sit iusto illo? Eligendi nostrum deleniti quod incidunt optio esse?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae ipsum velit pariatur optio libero magnam iure dolore quis? Id similique sit iusto illo? Eligendi nostrum deleniti quod incidunt optio esse?
+        </p>
     </section>
 
-    <section class="night">
+    <section class="room"></section>
 
+    <section class="info2" >
+        <h2>Information about company</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae ipsum velit pariatur optio libero magnam iure dolore quis? Id similique sit iusto illo? Eligendi nostrum deleniti quod incidunt optio esse?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae ipsum velit pariatur optio libero magnam iure dolore quis? Id similique sit iusto illo? Eligendi nostrum deleniti quod incidunt optio esse?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae ipsum velit pariatur optio libero magnam iure dolore quis? Id similique sit iusto illo? Eligendi nostrum deleniti quod incidunt optio esse?
+        </p>
     </section>
+
+    <section class="night"></section>
 </body>
 </html>
