--- a/index.html
+++ b/index.html
@@ -43,5 +43,9 @@
     </section>
 
     <section class="night"></section>
+
+    <footer>
+        <h4>Footer: content to be determined</h4>
+    </footer>
 </body>
 </html>
