& used to refer to parent element, more description added to footer

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="night"></section>
 
     <footer>
-        <h4>Footer: content to be determined</h4>
+        <h4>Footer: content to be determined? Good place to add Social meadia links if the company has any.</h4>
     </footer>
 </body>
 </html>
